# tron-netowrk-observer

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini  app.py
src/clients/tron/: __init__.py  client.py  dependency.py  exceptions.py  schemas.py
src/common/: db.py  httpx.py  redis.py
src/cruds/: tron_aq.py  uow.py
src/migrations/: env.py
src/migrations/versions/: 0001_add_trongqaddressquery_model.py
src/models/: mixins.py  tron_address_query.py
src/routers/: __init__.py  root.py  tron.py
src/schemas/: tron.py
src/settings/: __init__.py  db.py  redis.py
src/tests/api/: test_tron_endpoints.py
